fixed screen size creating overlap

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,9 @@
   color: #f2f2f2;
   margin-left: 25%;
   margin-right: 25px;
+  position: relative;
+  margin-left: 12.5%;
+  width: 75%;
 }
 .underConstruction {
   border-top: solid 30px;
@@ -72,12 +75,13 @@ h2{
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 400px;
-  max-height: 200px;
-  margin-left:25px;
-  margin-right: 25px;
+  width: 400px;
+  height: 550px;
+  margin-left:auto;
+  margin-right: auto;
   color: #F2F2F2;
-  position: absolute;
+  height: auto;
+  position: relative;
 }
 
 /* Hide the images by default */
